configured OTEL